--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,10 @@ dependencies {
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:29.0.4')
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
+
 
     // RxJava
     implementation "io.reactivex.rxjava3:rxjava:3.0.9"
@@ -77,4 +79,8 @@ dependencies {
 
     // GLIDE
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+
+    // LOTTIE
+    implementation "com.airbnb.android:lottie:5.2.0"
+
 }
